fix:openapiの設定を変更
