# src/storage/api-docs/api-docs.json
@@ -29,7 +29,25 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "ログイン成功"
+                        "description": "ログイン成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "token": {
+                                            "type": "string",
+                                            "example": "9|bWKC0YcBfDE1lOsBPmKAwMTTN91xu7iAEyxJcF1j1e936bed"
+                                        },
+                                        "expires_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2025-04-29T10:23:00Z"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "ログイン失敗"
@@ -44,6 +62,20 @@
                 ],
                 "summary": "ログアウト",
                 "operationId": "e8b5787dbac0ed48bbc31ee8b3c29918",
+                "responses": {
+                    "200": {
+                        "description": "ログアウト成功"
+                    }
+                }
+            }
+        },
+        "/hospital/refresh-token": {
+            "post": {
+                "tags": [
+                    "Hospital"
+                ],
+                "summary": "トークンリフレッシュ",
+                "operationId": "86da74dbbc4ed68675e5037c3bb35500",
                 "responses": {
                     "200": {
                         "description": "ログアウト成功"
@@ -75,7 +107,7 @@
                 "tags": [
                     "Hospital"
                 ],
-                "summary": "指定した曜日の予約受付時間の作成/更新",
+                "summary": "指定した曜日の受付時間の作成/更新",
                 "operationId": "16608eef905d5be3dc3a9f335784ff6b",
                 "requestBody": {
                     "required": true,
@@ -93,6 +125,34 @@
                     },
                     "400": {
                         "description": "失敗"
+                    }
+                }
+            }
+        },
+        "/hospital/business_hours/{uuid}": {
+            "delete": {
+                "tags": [
+                    "Hospital"
+                ],
+                "summary": "予約受付時間の削除",
+                "operationId": "b8332399d042fa0bc3cbd42e5b496b13",
+                "parameters": [
+                    {
+                        "name": "uuid",
+                        "in": "path",
+                        "description": "受付時間ID",
+                        "example": "1667cff9-71e5-4719-953c-e074507d2d3d"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功"
+                    },
+                    "400": {
+                        "description": "失敗"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
@@ -927,12 +987,26 @@
                 },
                 "type": "object"
             }
+        },
+        "securitySchemes": {
+            "sanctum": {
+                "type": "http",
+                "scheme": "bearer",
+                "description": "tokenを入力してください。",
+                "name": "Authorization",
+                "in": "header"
+            }
         }
     },
     "tags": [
         {
             "name": "Hospital",
             "description": "病院スタッフ"
+        }
+    ],
+    "security": [
+        {
+            "sanctum": []
         }
     ]
 }
